--- a/contacto.html
+++ b/contacto.html
@@ -12,7 +12,7 @@
     
     <nav>
         <ul>
-            <li><a href="Proyecto_YTJP_VAJ.html">Página principal</a></li>
+            <li><a href="index.html">Página principal</a></li>
             <li><a href="infogym.html">Nuestro Gimnasio</a></li>
             <li><a href="Suplementación Growtech.html">Suplementos GROWTECH</a></li>
             <li><a href="entrenamientos.html">Entrenamientos Personales</a></li>
