--- a/infogym.html
+++ b/infogym.html
@@ -10,7 +10,7 @@
     <header><h1>GROWTECH</h1></header>
     <nav>
         <ul>
-            <li><a href="Proyecto_YTJP_VAJ.html">Página principal</a></li>
+            <li><a href="index.html">Página principal</a></li>
             <li><a href="infogym.html">Nuestro Gimnasio</a></li>
             <li><a href="Suplementación Growtech.html">Suplementos GROWTECH</a></li>
             <li><a href="entrenamientos.html">Entrenamientos Personales</a></li>
